begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|ipc
package|;
end_package

begin_import
import|import
name|java
operator|.
name|io
operator|.
name|IOException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|net
operator|.
name|InetAddress
import|;
end_import

begin_import
import|import
name|java
operator|.
name|net
operator|.
name|UnknownHostException
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|concurrent
operator|.
name|TimeUnit
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|conf
operator|.
name|Configuration
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|HConstants
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|codec
operator|.
name|Codec
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|security
operator|.
name|SecurityInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|security
operator|.
name|User
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|security
operator|.
name|provider
operator|.
name|SaslClientAuthenticationProvider
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|security
operator|.
name|provider
operator|.
name|SaslClientAuthenticationProviders
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|util
operator|.
name|EnvironmentEdgeManager
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|util
operator|.
name|Pair
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|io
operator|.
name|compress
operator|.
name|CompressionCodec
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|security
operator|.
name|token
operator|.
name|Token
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|security
operator|.
name|token
operator|.
name|TokenIdentifier
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|yetus
operator|.
name|audience
operator|.
name|InterfaceAudience
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|Logger
import|;
end_import

begin_import
import|import
name|org
operator|.
name|slf4j
operator|.
name|LoggerFactory
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hbase
operator|.
name|thirdparty
operator|.
name|io
operator|.
name|netty
operator|.
name|util
operator|.
name|HashedWheelTimer
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hbase
operator|.
name|thirdparty
operator|.
name|io
operator|.
name|netty
operator|.
name|util
operator|.
name|Timeout
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hbase
operator|.
name|thirdparty
operator|.
name|io
operator|.
name|netty
operator|.
name|util
operator|.
name|TimerTask
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|shaded
operator|.
name|protobuf
operator|.
name|ProtobufUtil
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|shaded
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|RPCProtos
operator|.
name|ConnectionHeader
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|hbase
operator|.
name|shaded
operator|.
name|protobuf
operator|.
name|generated
operator|.
name|RPCProtos
operator|.
name|UserInformation
import|;
end_import

begin_comment
comment|/**  * Base class for ipc connection.  */
end_comment

begin_class
annotation|@
name|InterfaceAudience
operator|.
name|Private
specifier|abstract
class|class
name|RpcConnection
block|{
specifier|private
specifier|static
specifier|final
name|Logger
name|LOG
init|=
name|LoggerFactory
operator|.
name|getLogger
argument_list|(
name|RpcConnection
operator|.
name|class
argument_list|)
decl_stmt|;
specifier|protected
specifier|final
name|ConnectionId
name|remoteId
decl_stmt|;
specifier|protected
specifier|final
name|boolean
name|useSasl
decl_stmt|;
specifier|protected
specifier|final
name|Token
argument_list|<
name|?
extends|extends
name|TokenIdentifier
argument_list|>
name|token
decl_stmt|;
specifier|protected
specifier|final
name|InetAddress
name|serverAddress
decl_stmt|;
specifier|protected
specifier|final
name|SecurityInfo
name|securityInfo
decl_stmt|;
specifier|protected
specifier|final
name|int
name|reloginMaxBackoff
decl_stmt|;
comment|// max pause before relogin on sasl failure
specifier|protected
specifier|final
name|Codec
name|codec
decl_stmt|;
specifier|protected
specifier|final
name|CompressionCodec
name|compressor
decl_stmt|;
specifier|protected
specifier|final
name|HashedWheelTimer
name|timeoutTimer
decl_stmt|;
specifier|protected
specifier|final
name|Configuration
name|conf
decl_stmt|;
specifier|protected
specifier|static
name|String
name|CRYPTO_AES_ENABLED_KEY
init|=
literal|"hbase.rpc.crypto.encryption.aes.enabled"
decl_stmt|;
specifier|protected
specifier|static
name|boolean
name|CRYPTO_AES_ENABLED_DEFAULT
init|=
literal|false
decl_stmt|;
comment|// the last time we were picked up from connection pool.
specifier|protected
name|long
name|lastTouched
decl_stmt|;
specifier|protected
name|SaslClientAuthenticationProvider
name|provider
decl_stmt|;
specifier|protected
name|RpcConnection
parameter_list|(
name|Configuration
name|conf
parameter_list|,
name|HashedWheelTimer
name|timeoutTimer
parameter_list|,
name|ConnectionId
name|remoteId
parameter_list|,
name|String
name|clusterId
parameter_list|,
name|boolean
name|isSecurityEnabled
parameter_list|,
name|Codec
name|codec
parameter_list|,
name|CompressionCodec
name|compressor
parameter_list|)
throws|throws
name|IOException
block|{
if|if
condition|(
name|remoteId
operator|.
name|getAddress
argument_list|()
operator|.
name|isUnresolved
argument_list|()
condition|)
block|{
throw|throw
operator|new
name|UnknownHostException
argument_list|(
literal|"unknown host: "
operator|+
name|remoteId
operator|.
name|getAddress
argument_list|()
operator|.
name|getHostName
argument_list|()
argument_list|)
throw|;
block|}
name|this
operator|.
name|serverAddress
operator|=
name|remoteId
operator|.
name|getAddress
argument_list|()
operator|.
name|getAddress
argument_list|()
expr_stmt|;
name|this
operator|.
name|timeoutTimer
operator|=
name|timeoutTimer
expr_stmt|;
name|this
operator|.
name|codec
operator|=
name|codec
expr_stmt|;
name|this
operator|.
name|compressor
operator|=
name|compressor
expr_stmt|;
name|this
operator|.
name|conf
operator|=
name|conf
expr_stmt|;
name|User
name|ticket
init|=
name|remoteId
operator|.
name|getTicket
argument_list|()
decl_stmt|;
name|this
operator|.
name|securityInfo
operator|=
name|SecurityInfo
operator|.
name|getInfo
argument_list|(
name|remoteId
operator|.
name|getServiceName
argument_list|()
argument_list|)
expr_stmt|;
name|this
operator|.
name|useSasl
operator|=
name|isSecurityEnabled
expr_stmt|;
comment|// Choose the correct Token and AuthenticationProvider for this client to use
name|SaslClientAuthenticationProviders
name|providers
init|=
name|SaslClientAuthenticationProviders
operator|.
name|getInstance
argument_list|(
name|conf
argument_list|)
decl_stmt|;
name|Pair
argument_list|<
name|SaslClientAuthenticationProvider
argument_list|,
name|Token
argument_list|<
name|?
extends|extends
name|TokenIdentifier
argument_list|>
argument_list|>
name|pair
decl_stmt|;
if|if
condition|(
name|useSasl
operator|&&
name|securityInfo
operator|!=
literal|null
condition|)
block|{
name|pair
operator|=
name|providers
operator|.
name|selectProvider
argument_list|(
name|clusterId
argument_list|,
name|ticket
argument_list|)
expr_stmt|;
if|if
condition|(
name|pair
operator|==
literal|null
condition|)
block|{
if|if
condition|(
name|LOG
operator|.
name|isTraceEnabled
argument_list|()
condition|)
block|{
name|LOG
operator|.
name|trace
argument_list|(
literal|"Found no valid authentication method from providers={} with tokens={}"
argument_list|,
name|providers
operator|.
name|toString
argument_list|()
argument_list|,
name|ticket
operator|.
name|getTokens
argument_list|()
argument_list|)
expr_stmt|;
block|}
throw|throw
operator|new
name|RuntimeException
argument_list|(
literal|"Found no valid authentication method from options"
argument_list|)
throw|;
block|}
block|}
elseif|else
if|if
condition|(
operator|!
name|useSasl
condition|)
block|{
comment|// Hack, while SIMPLE doesn't go via SASL.
name|pair
operator|=
name|providers
operator|.
name|getSimpleProvider
argument_list|()
expr_stmt|;
block|}
else|else
block|{
throw|throw
operator|new
name|RuntimeException
argument_list|(
literal|"Could not compute valid client authentication provider"
argument_list|)
throw|;
block|}
name|this
operator|.
name|provider
operator|=
name|pair
operator|.
name|getFirst
argument_list|()
expr_stmt|;
name|this
operator|.
name|token
operator|=
name|pair
operator|.
name|getSecond
argument_list|()
expr_stmt|;
name|LOG
operator|.
name|debug
argument_list|(
literal|"Using {} authentication for service={}, sasl={}"
argument_list|,
name|provider
operator|.
name|getSaslAuthMethod
argument_list|()
operator|.
name|getName
argument_list|()
argument_list|,
name|remoteId
operator|.
name|serviceName
argument_list|,
name|useSasl
argument_list|)
expr_stmt|;
name|reloginMaxBackoff
operator|=
name|conf
operator|.
name|getInt
argument_list|(
literal|"hbase.security.relogin.maxbackoff"
argument_list|,
literal|5000
argument_list|)
expr_stmt|;
name|this
operator|.
name|remoteId
operator|=
name|remoteId
expr_stmt|;
block|}
specifier|protected
name|void
name|scheduleTimeoutTask
parameter_list|(
specifier|final
name|Call
name|call
parameter_list|)
block|{
if|if
condition|(
name|call
operator|.
name|timeout
operator|>
literal|0
condition|)
block|{
name|call
operator|.
name|timeoutTask
operator|=
name|timeoutTimer
operator|.
name|newTimeout
argument_list|(
operator|new
name|TimerTask
argument_list|()
block|{
annotation|@
name|Override
specifier|public
name|void
name|run
parameter_list|(
name|Timeout
name|timeout
parameter_list|)
throws|throws
name|Exception
block|{
name|call
operator|.
name|setTimeout
argument_list|(
operator|new
name|CallTimeoutException
argument_list|(
name|call
operator|.
name|toShortString
argument_list|()
operator|+
literal|", waitTime="
operator|+
operator|(
name|EnvironmentEdgeManager
operator|.
name|currentTime
argument_list|()
operator|-
name|call
operator|.
name|getStartTime
argument_list|()
operator|)
operator|+
literal|", rpcTimeout="
operator|+
name|call
operator|.
name|timeout
argument_list|)
argument_list|)
expr_stmt|;
name|callTimeout
argument_list|(
name|call
argument_list|)
expr_stmt|;
block|}
block|}
argument_list|,
name|call
operator|.
name|timeout
argument_list|,
name|TimeUnit
operator|.
name|MILLISECONDS
argument_list|)
expr_stmt|;
block|}
block|}
specifier|protected
name|byte
index|[]
name|getConnectionHeaderPreamble
parameter_list|()
block|{
comment|// Assemble the preamble up in a buffer first and then send it. Writing individual elements,
comment|// they are getting sent across piecemeal according to wireshark and then server is messing
comment|// up the reading on occasion (the passed in stream is not buffered yet).
comment|// Preamble is six bytes -- 'HBas' + VERSION + AUTH_CODE
name|int
name|rpcHeaderLen
init|=
name|HConstants
operator|.
name|RPC_HEADER
operator|.
name|length
decl_stmt|;
name|byte
index|[]
name|preamble
init|=
operator|new
name|byte
index|[
name|rpcHeaderLen
operator|+
literal|2
index|]
decl_stmt|;
name|System
operator|.
name|arraycopy
argument_list|(
name|HConstants
operator|.
name|RPC_HEADER
argument_list|,
literal|0
argument_list|,
name|preamble
argument_list|,
literal|0
argument_list|,
name|rpcHeaderLen
argument_list|)
expr_stmt|;
name|preamble
index|[
name|rpcHeaderLen
index|]
operator|=
name|HConstants
operator|.
name|RPC_CURRENT_VERSION
expr_stmt|;
synchronized|synchronized
init|(
name|this
init|)
block|{
name|preamble
index|[
name|rpcHeaderLen
operator|+
literal|1
index|]
operator|=
name|provider
operator|.
name|getSaslAuthMethod
argument_list|()
operator|.
name|getCode
argument_list|()
expr_stmt|;
block|}
return|return
name|preamble
return|;
block|}
specifier|protected
name|ConnectionHeader
name|getConnectionHeader
parameter_list|()
block|{
specifier|final
name|ConnectionHeader
operator|.
name|Builder
name|builder
init|=
name|ConnectionHeader
operator|.
name|newBuilder
argument_list|()
decl_stmt|;
name|builder
operator|.
name|setServiceName
argument_list|(
name|remoteId
operator|.
name|getServiceName
argument_list|()
argument_list|)
expr_stmt|;
specifier|final
name|UserInformation
name|userInfoPB
init|=
name|provider
operator|.
name|getUserInfo
argument_list|(
name|remoteId
operator|.
name|ticket
argument_list|)
decl_stmt|;
if|if
condition|(
name|userInfoPB
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setUserInfo
argument_list|(
name|userInfoPB
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
name|this
operator|.
name|codec
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setCellBlockCodecClass
argument_list|(
name|this
operator|.
name|codec
operator|.
name|getClass
argument_list|()
operator|.
name|getCanonicalName
argument_list|()
argument_list|)
expr_stmt|;
block|}
if|if
condition|(
name|this
operator|.
name|compressor
operator|!=
literal|null
condition|)
block|{
name|builder
operator|.
name|setCellBlockCompressorClass
argument_list|(
name|this
operator|.
name|compressor
operator|.
name|getClass
argument_list|()
operator|.
name|getCanonicalName
argument_list|()
argument_list|)
expr_stmt|;
block|}
name|builder
operator|.
name|setVersionInfo
argument_list|(
name|ProtobufUtil
operator|.
name|getVersionInfo
argument_list|()
argument_list|)
expr_stmt|;
name|boolean
name|isCryptoAESEnable
init|=
name|conf
operator|.
name|getBoolean
argument_list|(
name|CRYPTO_AES_ENABLED_KEY
argument_list|,
name|CRYPTO_AES_ENABLED_DEFAULT
argument_list|)
decl_stmt|;
comment|// if Crypto AES enable, setup Cipher transformation
if|if
condition|(
name|isCryptoAESEnable
condition|)
block|{
name|builder
operator|.
name|setRpcCryptoCipherTransformation
argument_list|(
name|conf
operator|.
name|get
argument_list|(
literal|"hbase.rpc.crypto.encryption.aes.cipher.transform"
argument_list|,
literal|"AES/CTR/NoPadding"
argument_list|)
argument_list|)
expr_stmt|;
block|}
return|return
name|builder
operator|.
name|build
argument_list|()
return|;
block|}
specifier|protected
specifier|abstract
name|void
name|callTimeout
parameter_list|(
name|Call
name|call
parameter_list|)
function_decl|;
specifier|public
name|ConnectionId
name|remoteId
parameter_list|()
block|{
return|return
name|remoteId
return|;
block|}
specifier|public
name|long
name|getLastTouched
parameter_list|()
block|{
return|return
name|lastTouched
return|;
block|}
specifier|public
name|void
name|setLastTouched
parameter_list|(
name|long
name|lastTouched
parameter_list|)
block|{
name|this
operator|.
name|lastTouched
operator|=
name|lastTouched
expr_stmt|;
block|}
comment|/**    * Tell the idle connection sweeper whether we could be swept.    */
specifier|public
specifier|abstract
name|boolean
name|isActive
parameter_list|()
function_decl|;
comment|/**    * Just close connection. Do not need to remove from connection pool.    */
specifier|public
specifier|abstract
name|void
name|shutdown
parameter_list|()
function_decl|;
specifier|public
specifier|abstract
name|void
name|sendRequest
parameter_list|(
name|Call
name|call
parameter_list|,
name|HBaseRpcController
name|hrc
parameter_list|)
throws|throws
name|IOException
function_decl|;
comment|/**    * Does the clean up work after the connection is removed from the connection pool    */
specifier|public
specifier|abstract
name|void
name|cleanupConnection
parameter_list|()
function_decl|;
block|}
end_class

end_unit

